add communities scaffold again

--- a/test/fixtures/communities.yml
+++ b/test/fixtures/communities.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  description: MyString
+  description: 
+  category: 
+  location: MyString
 
 two:
-  description: MyString
+  description: 
+  category: 
+  location: MyString
